Closed Bug 1000621 Opened 11 years ago Closed 11 years ago

[DMD] Crash in DumpMemoryInfoToTempDir in DMD builds without DMD enabled

Categories

(Core :: DMD, defect)

x86
macOS
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla31

People

(Reporter: erahm, Assigned: erahm)

Details

(Whiteboard: [MemShrink])

Attachments

(2 files)

Attached file lldb backtrace
I'm seeing a crash due to an uninitialized malloc table in DMD when I perform a memory dump on a DMD-enabled build, but without DMD turned on. Ideally we wouldn't call into DMD at all if it's not enabled. As a side-effect I also see an empty DMD log file generated, I would expect no DMD output if it's disabled.
Assignee: nobody → erahm
Attachment #8412001 - Flags: review?(n.nethercote)
Comment on attachment 8412001 [details] [diff] [review] Check if DMD is enabled before dumping Review of attachment 8412001 [details] [diff] [review]: ----------------------------------------------------------------- Huh. I guess I've never tried that combination! Thanks.
Attachment #8412001 - Flags: review?(n.nethercote) → review+
Status: NEW → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla31
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: