Bug 1000621 - Check if DMD is enabled before dumping. r=njn. DONTBUILD