memory/replace/dmd/DMD.cpp
@@ -2095,6 +2095,12 @@ ClearReports()
   ClearReportsInternal();
 }
 
+MOZ_EXPORT bool
+IsEnabled()
+{
+  return gIsDMDRunning;
+}
+
 MOZ_EXPORT void
 Dump(Writer aWriter)
 {
